# kamui

./: .gitignore  Cargo.toml
example-vrf-game/: Cargo.toml
example-vrf-game/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
kamui-example-program/: .gitignore  Cargo.toml
kamui-example-program/scripts/: test.sh
kamui-example-program/src/: error.rs  example_consumer.rs  lib.rs  mock_prover.rs  processor.rs  state.rs
kamui-example-program/tests/: devnet_test.rs  vrf_devnet_test.rs  vrf_flow_test.rs
kamui-program/: Cargo.toml
kamui-program/scripts/: test.sh
kamui-program/src/: consumer.rs  event.rs  example_consumer.rs  instruction.rs  lib.rs  mock_prover.rs  processor.rs
kamui-program/tests/: devnet_test.rs  vrf_devnet_test.rs  vrf_flow_test.rs
mangekyou/: Cargo.toml
mangekyou-cli/: Cargo.toml
mangekyou-cli/src/: ecvrf.rs  lib.rs
mangekyou-cli/tests/: ecvrf.rs
mangekyou/src/: custom_random.rs  kamui_vrf.rs  serde_helpers.rs  traits.rs
src/: example_consumer.rs  lib.rs
tests/: devnet_test.rs
