[package]
name = "example_vrf_game"
version = "0.1.0"
edition = "2021"

[lib]
name = "example_vrf_game"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []
mock = ["mangekyou", "rand", "solana-sdk", "solana-program-test", "hex", "serde_json", "tokio", "clap"]

[dependencies]
solana-program = "1.18"
borsh = "1.2.1"
borsh-derive = "1.2.1"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
sha2 = "0.10"
base64 = "0.21"
mangekyou = { path = "../mangekyou", optional = true }
rand = { version = "0.8", optional = true }
solana-sdk = { version = "1.18", optional = true }
solana-program-test = { version = "1.18", optional = true }
hex = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
solana-client = "1.18"
solana-zk-token-sdk = "1.18"
anyhow = "1.0"
solana-sdk = "1.18"
solana-program-test = "1.18"
tokio = { version = "1.0", features = ["full", "test-util"] }
rand = "0.8"
serde_json = "1.0"
mangekyou = { path = "../mangekyou" }
hex = "0.4"

[[bin]]
name = "mock-prover"
path = "src/bin/mock_prover.rs"
required-features = ["mock"]

[workspace]