[package]
name = "kamui-example-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18"
borsh = { version = "1.2.1", default-features = false }
solana-zk-token-sdk = "1.18"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
solana-client = "1.18"
solana-cli-config = "1.18"
tokio = { version = "1.24", features = ["full"] }
mangekyou = { path = "../mangekyou" }
rand = "0.8"
serde_json = "1.0"
hex = "0.4"

[workspace]