[package]
name = "kamui-example-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18"
borsh = "1.2.1"
borsh-derive = "1.2.1"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
sha2 = "0.10"
base64 = "0.21"
mangekyou = { path = "../mangekyou" }
rand = "0.8"
solana-sdk = "1.18"
solana-program-test = "1.18"
hex = "0.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
solana-client = "1.18"
solana-zk-token-sdk = "1.18"
anyhow = "1.0"

[[bin]]
name = "mock-prover"
path = "src/bin/mock_prover.rs"

[workspace]